@@ -1,6 +1,7 @@
 0.04
  - Fix bugtracker.
  - Fix use lib '.' in Makefile.PL.
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.21 version.
  - Update author github username.
  - Update author username.
